creditas-sf/force-app/main/default/objects/Opportunity/fields/AnalysisQuantity__c.field-meta.xml
<CustomField>
    <fullName>AnalysisQuantity__c</fullName>
    <label>Total de análises</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>