creditas-sf/force-app/main/default/objects/Opportunity/fields/AnalysisTimeHM__c.field-meta.xml
<CustomField>
    <fullName>AnalysisTimeHM__c</fullName>
    <formula>TEXT( 
FLOOR( IF(AnalysisTotalTime__c &gt;= 24, AnalysisTotalTime__c / 24,0 )) 
) &amp; &quot;d &quot; &amp; 
TEXT( 
FLOOR(MOD(IF(AnalysisTotalTime__c &gt; 24, AnalysisTotalTime__c / 24,0)*24,24)) 
) &amp;&quot;h &quot; &amp; 
TEXT( FLOOR( ( ROUND(AnalysisTotalTime__c,2)-FLOOR(AnalysisTotalTime__c) ) * 60 ) ) + &apos;m&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de Análise (D/H/M)</label>
    <type>Text</type>
</CustomField>