creditas-sf/force-app/main/default/objects/Opportunity/fields/AnalysisTotalTime__c.field-meta.xml
<CustomField>
    <fullName>AnalysisTotalTime__c</fullName>
    <label>Tempo total análise</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>