creditas-sf/force-app/main/default/objects/Opportunity/fields/BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>BankAccountType__c</fullName>
    <label>Tipo de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAVINGS</fullName>
                <label>Conta Poupança</label>
            </value>
            <value>
                <fullName>CHECKINGS</fullName>
                <label>Conta Corrente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>