creditas-sf/force-app/main/default/objects/Opportunity/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>Código do Banco</label>
    <length>20</length>
    <type>Text</type>
</CustomField>