creditas-sf/force-app/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Agência</label>
    <length>20</length>
    <type>Text</type>
</CustomField>