creditas-sf/force-app/main/default/objects/Opportunity/fields/ccbNumber__c.field-meta.xml
<CustomField>
    <fullName>ccbNumber__c</fullName>
    <label>Número da CCB</label>
    <length>100</length>
    <type>Text</type>
</CustomField>