creditas-sf/force-app/main/default/objects/Opportunity/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <formula>TEXT(SyncedQuote.ContractDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data do contrato</label>
    <type>Text</type>
</CustomField>