creditas-sf/force-app/main/default/objects/Opportunity/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <formula>Account.DocumentNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do Documento</label>
    <type>Text</type>
</CustomField>