creditas-sf/force-app/main/default/objects/Opportunity/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <formula>TEXT(Account.DocumentType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo do documento</label>
    <type>Text</type>
</CustomField>