creditas-sf/force-app/main/default/objects/Opportunity/fields/ExternalCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalCreationDate__c</fullName>
    <label>ExternalCreationDate</label>
    <type>DateTime</type>
</CustomField>