creditas-sf/force-app/main/default/objects/Opportunity/fields/ExternalModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ExternalModifiedBy__c</fullName>
    <label>ExternalModifiedBy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>