creditas-sf/force-app/main/default/objects/Opportunity/fields/ExternalTenant__c.field-meta.xml
<CustomField>
    <fullName>ExternalTenant__c</fullName>
    <label>ExternalTenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>creditasmx</fullName>
            </value>
            <value>
                <fullName>creditasbr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>