creditas-sf/force-app/main/default/objects/Opportunity/fields/ExternalUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ExternalUpdatedDate__c</fullName>
    <label>ExternalUpdatedDate</label>
    <type>DateTime</type>
</CustomField>