creditas-sf/force-app/main/default/objects/Opportunity/fields/ExternalVersion__c.field-meta.xml
<CustomField>
    <fullName>ExternalVersion__c</fullName>
    <label>ExternalVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>