creditas-sf/force-app/main/default/objects/Opportunity/fields/Flow_Stage__c.field-meta.xml
<CustomField>
    <fullName>Flow_Stage__c</fullName>
    <label>Flow Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surprise de Formalização</fullName>
            </value>
            <value>
                <fullName>Antecipação da Minuta</fullName>
            </value>
            <value>
                <fullName>Não é possível Antecipar a Minuta</fullName>
            </value>
            <value>
                <fullName>Identificada Pendência para Emissão</fullName>
            </value>
            <value>
                <fullName>Não há pendência para Emissão</fullName>
            </value>
            <value>
                <fullName>Surprise de Formalização( Conferência )</fullName>
            </value>
            <value>
                <fullName>Validação de Minuta</fullName>
            </value>
            <value>
                <fullName>Ajuste de Minuta</fullName>
            </value>
            <value>
                <fullName>Pendência de Assinatura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>