creditas-sf/force-app/main/default/objects/Opportunity/fields/FormalizationStatus__c.field-meta.xml
<CustomField>
    <fullName>FormalizationStatus__c</fullName>
    <label>Status de Formalização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewProposal</fullName>
                <label>Nova Proposta</label>
            </value>
            <value>
                <fullName>AwaitingAnalysis</fullName>
                <label>Aguardando Análise</label>
            </value>
            <value>
                <fullName>UnderAnalysis</fullName>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>WaitingForOPS</fullName>
                <label>Aguardando OPS</label>
            </value>
            <value>
                <fullName>SuccessfullyCompleted</fullName>
                <label>Finalizados com Sucesso</label>
            </value>
            <value>
                <fullName>Refused</fullName>
                <label>Recusados</label>
            </value>
            <value>
                <fullName>Pendencies</fullName>
                <label>Pendências</label>
            </value>
            <value>
                <fullName>Quitters</fullName>
                <label>Desistentes</label>
            </value>
            <value>
                <fullName>BlockList(ConfirmedFraud)</fullName>
                <label>Block-list (Fraude Confirmada)</label>
            </value>
            <value>
                <fullName>SuspectedCases</fullName>
                <label>Casos Suspeitos</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeitado</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>Pendenciado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>