creditas-sf/force-app/main/default/objects/Opportunity/fields/Full_name__c.field-meta.xml
<CustomField>
    <fullName>Full_name__c</fullName>
    <formula>Account.FirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Completo</label>
    <type>Text</type>
</CustomField>