creditas-sf/force-app/main/default/objects/Opportunity/fields/IdName__c.field-meta.xml
<CustomField>
    <fullName>IdName__c</fullName>
    <externalId>true</externalId>
    <label>IdName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>