creditas-sf/force-app/main/default/objects/Opportunity/fields/IsExternallySynched__c.field-meta.xml
<CustomField>
    <fullName>IsExternallySynched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Esse campo determina se houve alteração dos registros no Salesforce, para que o Mulesoft identifique quando propagar alterações.</description>
    <label>IsExternallySynched</label>
    <type>Checkbox</type>
</CustomField>