creditas-sf/force-app/main/default/objects/Opportunity/fields/IsSynchEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSynchEnabled__c</fullName>
    <description>O objetivo desse campo é informar ao Mulesoft, se ele tem permissão para iniciar a sincronização da Oportunidade.</description>
    <label>IsSynchEnabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISABLED</fullName>
                <default>true</default>
                <label>DISABLED</label>
            </value>
            <value>
                <fullName>SYNCHING</fullName>
            </value>
            <value>
                <fullName>ENABLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>