creditas-sf/force-app/main/default/objects/Opportunity/fields/MigrationRecord__c.field-meta.xml
<CustomField>
    <fullName>MigrationRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Migration Record</label>
    <type>Checkbox</type>
</CustomField>