creditas-sf/force-app/main/default/objects/Opportunity/fields/MinimalRequiredIncome__c.field-meta.xml
<CustomField>
    <fullName>MinimalRequiredIncome__c</fullName>
    <label>Renda Mínima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>