creditas-sf/force-app/main/default/objects/Opportunity/fields/MonthlyInterest__c.field-meta.xml
<CustomField>
    <fullName>MonthlyInterest__c</fullName>
    <formula>TEXT(SyncedQuote.MonthlyInterest__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxa de Juros</label>
    <type>Text</type>
</CustomField>