creditas-sf/force-app/main/default/objects/Opportunity/fields/Owner_Task_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Owner_Task_Anterior__c</fullName>
    <label>Owner Task Anterior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>