creditas-sf/force-app/main/default/objects/Opportunity/fields/PendencyReturn__c.field-meta.xml
<CustomField>
    <fullName>PendencyReturn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para marcar se a oportunidade é um retorno de pendência</description>
    <label>Retorno de Pendência</label>
    <type>Checkbox</type>
</CustomField>