creditas-sf/force-app/main/default/objects/Opportunity/fields/principalDocumentNumberMigration__c.field-meta.xml
<CustomField>
    <fullName>principalDocumentNumberMigration__c</fullName>
    <label>Documento do Solicitante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>