creditas-sf/force-app/main/default/objects/Opportunity/fields/PriorityPoints__c.field-meta.xml
<CustomField>
    <fullName>PriorityPoints__c</fullName>
    <label>Priorização</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>