creditas-sf/force-app/main/default/objects/Opportunity/fields/Processo_de_Emissao_ja_criado__c.field-meta.xml
<CustomField>
    <fullName>Processo_de_Emissao_ja_criado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processo de Emissão já criado ?</label>
    <type>Checkbox</type>
</CustomField>