creditas-sf/force-app/main/default/objects/Opportunity/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>TEXT(SyncedQuote.Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazo solicitado</label>
    <type>Text</type>
</CustomField>