creditas-sf/force-app/main/default/objects/Opportunity/fields/RequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>RequestedAmount__c</fullName>
    <formula>TEXT(SyncedQuote.RequestedAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor do crédito solicitado</label>
    <type>Text</type>
</CustomField>