creditas-sf/force-app/main/default/objects/Opportunity/fields/StatusDeFormalizacao__c.field-meta.xml
<CustomField>
    <fullName>StatusDeFormalizacao__c</fullName>
    <label>Status de Formalização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nova Proposta</fullName>
            </value>
            <value>
                <fullName>Aguardando Análise</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>Aguardando OPS</fullName>
            </value>
            <value>
                <fullName>Finalizados com Sucesso</fullName>
            </value>
            <value>
                <fullName>Recusados</fullName>
            </value>
            <value>
                <fullName>Pendências</fullName>
            </value>
            <value>
                <fullName>Desistentes</fullName>
            </value>
            <value>
                <fullName>Block-list (Fraude Confirmada)</fullName>
            </value>
            <value>
                <fullName>Casos Suspeitos</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
            <value>
                <fullName>Pendenciado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>