creditas-sf/force-app/main/default/objects/Opportunity/fields/SumIncome__c.field-meta.xml
<CustomField>
    <fullName>SumIncome__c</fullName>
    <label>Renda somada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>