creditas-sf/force-app/main/default/objects/Opportunity/recordTypes/AtWork.recordType-meta.xml
<RecordType>
    <fullName>AtWork</fullName>
    <active>true</active>
    <businessProcess>%40Work - Creditas</businessProcess>
    <label>@Work</label>
</RecordType>