creditas-sf/force-app/main/default/objects/Opportunity/recordTypes/AutoFin.recordType-meta.xml
<RecordType>
    <fullName>AutoFin</fullName>
    <active>true</active>
    <businessProcess>AutoFin - Creditas</businessProcess>
    <label>AutoFin</label>
</RecordType>