creditas-sf/force-app/main/default/objects/Opportunity/recordTypes/Home.recordType-meta.xml
<RecordType>
    <fullName>Home</fullName>
    <active>true</active>
    <businessProcess>Home - Creditas</businessProcess>
    <label>Home</label>
</RecordType>