creditas-sf/force-app/main/default/objects/Opportunity/listViews/Atwork_AllProposalFormalizacion.listView-meta.xml
<ListView>
    <fullName>Atwork_AllProposalFormalizacion</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ProductType__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.AtWork</value>
    </filters>
    <label>[Formalização] Todas as propostas</label>
</ListView>