creditas-sf/force-app/main/default/objects/Opportunity/listViews/Atwork_DischargeFormalizacion.listView-meta.xml
<ListView>
    <fullName>Atwork_DischargeFormalizacion</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ProductType__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>DISCHARGE</value>
    </filters>
    <label>[Formalização] Quitação</label>
</ListView>