creditas-sf/force-app/main/default/objects/Opportunity/listViews/Atwork_PayrollLoanFormalizacion.listView-meta.xml
<ListView>
    <fullName>Atwork_PayrollLoanFormalizacion</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>ProductType__c</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProductType__c</field>
        <operation>equals</operation>
        <value>PAYROLL_LOAN</value>
    </filters>
    <label>[Formalização] Payroll</label>
    <sharedTo>
        <role>BR_ATWORK_Manager_Formalization</role>
    </sharedTo>
</ListView>